# camera1394stereo

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  manifest.xml  package.xml
cfg/: Camera1394Stereo.cfg
launch/: stereo_camera.launch  stereo_camera_full.launch
src/nodes/: CMakeLists.txt  camera1394stereo.cpp  camera1394stereo_node.cpp  dev_camera1394stereo.cpp  dev_camera1394stereo.h  driver1394stereo.cpp  driver1394stereo.h  features.cpp  features.h  featuresstereo.cpp  featuresstereo.h  format7stereo.cpp  nodelet.cpp  yuv.h
